--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
   <body>
     <div id="root"></div>
+    <script>
+      if (window.innerWidth < 768) {
+        navigator.__defineGetter__("userAgent", function () {
+          return "Mozilla/5.0 (iPhone; CPU iPhone OS 16_6 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/16.6 Mobile/15E148 Safari/604.1";
+        });
+      }
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 
